objects/Gong__Call_Stat__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Interaction Stats</relationshipLabel>
        <relationshipName>Call_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Numeric_Value__c</fullName>
        <label>Stat Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Value__c</fullName>
        <label>Value (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Interaction Stats</label>
    <nameField>
        <label>Stat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>